# urpaform

./: .pylintrc  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
mock/: urpa.py
mock/urpa/: __init__.py  const.py
src/urpaform/: elements.py  form.py
tests/: conftest.py  test_elements.py  test_exceptions.py  test_form.py  test_urpaform.py
urpaform/: __about__.py  __init__.py  aliases.py  constants.py  elements.py  errors.py  form.py  urpaform.py  utils.py
